; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_packet.c_WPACKET_sub_reserve_bytes__.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/ssl/extr_packet.c_WPACKET_sub_reserve_bytes__.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @WPACKET_sub_reserve_bytes__(i32* %0, i64 %1, i8** %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8**, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8** %2, i8*** %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i64, i64* %9, align 8
  %12 = load i64, i64* %7, align 8
  %13 = add i64 %11, %12
  %14 = load i8**, i8*** %8, align 8
  %15 = call i32 @WPACKET_reserve_bytes(i32* %10, i64 %13, i8** %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %23

18:                                               ; preds = %4
  %19 = load i64, i64* %9, align 8
  %20 = load i8**, i8*** %8, align 8
  %21 = load i8*, i8** %20, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 %19
  store i8* %22, i8** %20, align 8
  store i32 1, i32* %5, align 4
  br label %23

23:                                               ; preds = %18, %17
  %24 = load i32, i32* %5, align 4
  ret i32 %24
}

declare dso_local i32 @WPACKET_reserve_bytes(i32*, i64, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
